# Doki-Backend

./: .dockerignore  .gitignore  AUTH_IMPLEMENTATION.md  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  SUPABASE_AUTH_SETUP.md  SUPABASE_INTEGRATION.md  TESTING_GUIDE.md  USER_SUPABASE_SETUP.sql  env.sample  pyproject.toml  requirements.txt  test-docker-local.sh
app/: main.py
app/api/: agent.py  auth.py  connectors.py
app/auth/: dependencies.py
app/connectors/: sheets.py  supabase.py
app/core/: encryption.py  jwt_validation.py  secrets.py
app/models/: agent.py  auth.py  connectors.py
